--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="total-price">$0</div>
                 </div>
                 <!-- Buy Button -->
-                <button type="button" class="btn-buy">Buy Now</button>
+                <button type="button" class="buy-btn">Buy Now</button>
                 <!-- Cart Close -->
                 <i class='bx bx-x' id="close-cart"></i>
             </div>
@@ -111,5 +111,7 @@
             </div>
         </div>
     </section>
+    <!-- JS -->
+    <script src="js/main.js"></script>
 </body>
 </html>
